2010-07-06  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] build-webkit should not run autogen.sh unconditionally
        https://bugs.webkit.org/show_bug.cgi?id=41704

        * Scripts/webkitdirs.pm: Only run autogen.sh during a build if GNUmakefile
        doesn't exist. Autotools should re-run autogen.sh when necessary. Also do
        some very minor cleanup.

2010-07-06  Darin Adler  <darin@apple.com>

        Try to fix Chromium build.

        * DumpRenderTree/chromium/WebViewHost.cpp: Added include of PassOwnPtr.h.

2010-07-06  Darin Adler  <darin@apple.com>

        Fix build.

        * WebKitAPITest/TestsController.cpp:
        (WebKitAPITest::TestsController::addTest): Use leakPtr instead of release.

2010-07-06  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Kent Tamura.

        Bug 40558 - [DRT/Chromium] Upstream TestShellDevTools for Chromium DRT
        https://bugs.webkit.org/show_bug.cgi?id=40558

        Upstream DevTools for Chromium DRT.
        (original Chromium files rev. 51287)

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp: Added.
        (DRTDevToolsAgent::DRTDevToolsAgent):
        (DRTDevToolsAgent::setWebView):
        (DRTDevToolsAgent::sendMessageToFrontend):
        (DRTDevToolsAgent::forceRepaint):
        (DRTDevToolsAgent::runtimeFeatureStateChanged):
        (DRTDevToolsAgent::injectedScriptSource):
        (DRTDevToolsAgent::injectedScriptDispatcherSource):
        (DRTDevToolsAgent::debuggerScriptSource):
        (DRTDevToolsAgent::asyncCall):
        (DRTDevToolsAgent::call):
        (DRTDevToolsAgent::webDevToolsAgent):
        (DRTDevToolsAgent::attach):
        (DRTDevToolsAgent::detach):
        (DRTDevToolsAgent::setTimelineProfilingEnabled):
        (DRTDevToolsAgent::evaluateInWebInspector):
        (DRTDevToolsAgent::dispatchMessageLoop):
        * DumpRenderTree/chromium/DRTDevToolsAgent.h: Added.