@@ -1,3 +1,12 @@
+2010-07-06  Darin Adler  <darin@apple.com>
+
+        Fix Chromium build.
+
+        * DumpRenderTree/chromium/WebViewHost.cpp:
+        (WebViewHost::didCreateDataSource): Call leakPtr instead of release.
+        (WebViewHost::didNavigateWithinPage): Ditto.
+        (WebViewHost::updateURL): Ditto.
+
 2010-07-06  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Xan Lopez.
